# MarbleGP

./: .gitignore  .gitmodules  start_debug.bat  start_release.bat
data/: texture_patterns.xml
data/fonts/: big.xml  font.txt  font_10.xml  font_12.xml  font_14.xml  font_18.xml  font_20.xml  font_24.xml  font_48.xml  font_56.xml  font_68.xml  font_72.xml  fontsizes.xml
data/levels/counter_traffic/: counter_traffic.3ds  track.xml
data/levels/doubleloop/: info.xml  track.xml
data/levels/eight_crossing/: eight_crossing.3ds
data/levels/eight_hi_lo/: info.xml  track.xml
data/levels/eight_steep/: steep_eight.3ds  track.xml
data/levels/flat_counter_crossings/: track.xml
data/levels/oval/: info.xml  oval.3ds  track.xml
data/levels/stepstones/: track.xml
data/levels/the_gates/: dynamics.lua  info.xml  new_wall.3ds  the_gates.3ds  the_gates_gate.3ds  track.xml
data/levels/the_wall/: info.xml  new_wall.3ds  track.xml
data/levels/tower_ascend/: info.xml  tower_ascend.3ds  track.xml
data/lua/: championship_functions.lua  default_texture.lua  dialog_confirm.lua  gamelogics.lua  helpers_main.lua  menu_goodbye.lua  menu_main.lua  menu_profiles.lua  menu_selecttrack.lua  menu_settings.lua  menu_setupgame.lua  menu_trackselect.lua  nextrace.lua  serializer.lua  shuffle.lua  spairs.lua  splitstring.lua
data/menu/: button_cancel.xml  button_ok.xml  dialog_color.xml  dialog_confirm.xml  dialog_controls.xml  dialog_playerlist.xml  dialog_select_pattern.xml  dialog_select_player.xml  dialog_texture.xml  menu_main.xml  menu_playerprofiles.xml  menu_profiles.xml  menu_selecttrack.xml  menu_settings.xml  menu_setupgame.xml  version.xml
data/menu3d/: credits.xml  dialog_players.xml  menu_editprofile.xml  menu_main.xml  menu_settings.xml  menu_setupgame.xml  menu_trackselect.xml  texture_scene.xml
data/objects/: MarbleGP.3ds  button.3ds  button_add.3ds  button_arrow.3ds  button_cancel.3ds  button_check.3ds  button_ok.3ds  button_pre_next.3ds  checkpoint.3ds  credits_end.3ds  credits_segment.3ds  credits_show.3ds  dropdown_item.3ds  dropdown_top.3ds  dustbin.3ds  edit.3ds  edit_player_profile.3ds  gameover.3ds  gfx_setup.3ds  go.3ds  good_bye.3ds  image.3ds  label.3ds  label2.3ds  menu_frame.3ds  one.3ds  players.3ds  ready.3ds  respawn.3ds  respawn_editor.3ds  setup_game.3ds  slider.3ds  sound_setup.3ds  sphere.mtl  sphere_raspi.mtl  stunned.3ds  three.3ds  track_select.3ds  two.3ds
data/scenes/: menu_bye.xml  skybox.xml
project/: android_library.txt  filesMarbleGP_Setup.xml  iconsizes.txt  links.txt  names.txt
project/LuaTest/: LuaTest.vcxproj  LuaTest.vcxproj.filters  LuaTest_main.cpp
project/MarbleGP/: MarbleGP.sln  MarbleGP.vcxproj  MarbleGP.vcxproj.filters
project/MarbleGP_Android/: MarbleGP_Android.sln  settings.gradle
project/MarbleGP_Android/MarbleGP_Android/: MarbleGP_Android.sln
project/MarbleGP_Android/app/: CMakeLists.txt  build.gradle
project/MarbleGP_Android/app/src/main/cpp/: CMakeLists.txt  marblegp.cpp
project/MarbleGP_Plugin/: MarbleGP_Plugin.sln  MarbleGP_Plugin.vcxproj  MarbleGP_Plugin.vcxproj.filters  dllmain.cpp
project/MarbleGP_Raspberry/: MarbleGP_Raspberry.sln  MarbleGP_Raspberry.vcxproj  MarbleGP_Raspberry.vcxproj.filters
project/MarbleGP_Raspberry/MarbleGP_Raspberry/: MarbleGP_Raspberry.vcxproj  MarbleGP_Raspberry.vcxproj.filters
project/MarbleGP_Windows/: MarbleGP_Windows.sln
project/MarbleGP_Windows/MarbleGP_Windows/: MarbleGP_Windows.aps  MarbleGP_Windows.rc  MarbleGP_Windows.vcxproj  MarbleGP_Windows.vcxproj.filters  resource.h
project/_source/include/: CGlobal.h  CMainClass.h  Defines.h
project/_source/source/: CGlobal.cpp  CMainClass.cpp  MarbleGP.cpp  main_android.cpp  main_raspberry.cpp  main_windows.cpp
project/data/: ai_profiles.xml  brake.txt  colors.txt  cups.json  htmlfiles.xml  marblesounds.xml  names.txt  profiles.txt
project/data/cups/: complete.xml  complex.xml  flat.xml  jump.xml  moving.xml  noob.xml  (+1 more)
project/data_android/: grid_layout.xml
project/images/: DustbinGames-MarbleGP.xcf  arrow_ahead.xcf  bot_icons.xcf  control_help.xcf  countdown.xcf  cursor.xcf  gyro.xcf  laurel.xcf  logo.xcf  logo_round.xcf  marble_positions.xcf  menu_icons.xcf  numbers.xcf  patterns.xcf  rostrum_final.xcf  speedlimit.xcf  textures.xcf  touch_buttons.xcf  touch_control.xcf  wall.xcf  wall_pattern.xcf  wall_rect.xcf
project/installer/: license.rtf
project/release/: .gitignore  changelog.php
project/script/: GenerateMessages.py  call_signtool.bat  copydata_android.bat  copydata_android.py  copydata_functions.py  copydata_modified.bat  copydata_modified.py  copydata_windows.bat  copydata_windows.py  createAndrdoidBundle.bat  createDataFiles.bat  createDataFiles.py  createHTMLFileList.bat  createHTMLFileList.py  createPatternList.bat  createPatternList.py  createluabind.bat  createluabind.py  createtracklist.bat  createtracklist.py  datastructs.json  generateMessages.bat  generateMessages.py  getVersionInfo.bat  getVersionInfo.py  installdata_android.bat  installdata_raspi.bat  luabind.json  luamesh.json  marblegp.wixproj  messages.json  preparerelease.bat  releasecreator.bat  setup.iss  updateversion.bat  updateversion.py
project/test/: 01-championship.lua  02-championship_sort.lua
project/tracks_and_models/: Hint.wings  checkpoint.wings  countdown.wings  direction.wings  double_hop.wings  doubleloop.wings  dustbingames_curcuit.wings  eight_crossing.wings  eight_hi_lo.wings  eight_hi_low.wings  flat_counter_crossings.wings  flat_counter_crossings_aihelp.wings  four_obstacles.wings  hammer.wings  hi_jump.wings  incline.wings  jump_eight.wings  kicker.wings  lapcount.wings  lapcount_android.wings  long_jump.wings  loop_double.wings  loop_single.wings  noob_complex.wings  noob_eight_crossing.wings  noob_eight_crossing_aihelp.wings  noob_oval.wings  octagon.wings  oval.wings  playground.wings  racedisplay.wings  roof1.wings  rostrum.wings  rostrum_final.wings  rotor.wings  slapperOne.wings  slapperTwo.wings  small.wings  speedlimit.wings  speedlimit_android.wings  (+17 more)
shaders/: BlurHP.glsl  BlurVP.glsl  BrightPass.glsl
(+762 files in other folders)
